--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,7 +174,7 @@ html, body {
 		margin-bottom: 0;
 	}
 
-	/*.sections-div a {
+	.sections-div a {
 		font-size: 1em;
 		margin-left: 20px;
 		text-decoration: none;
@@ -183,10 +183,10 @@ html, body {
 
 	.top-right {
 		padding: 20px;
-		margin-top: 5px;
+		margin-top: 0;
 		font-size: 2.5em;
 		opacity: .2;
-	}*/
+	}
 
 	.right {
 		background-color: white;
@@ -196,10 +196,30 @@ html, body {
 		margin-right: 20px;
 	}
 
+	.right .nav-list .nav-item h4 {
+		font-size: 1.1em;
+	}
+
 	.projects button {
 		font-size: .9em;
 		margin: 3px;
 		padding: 5px;
+	}
+
+	#skills, #projects, #connect {
+		font-size: 1.7em;
+	}
+
+	.note {
+		font-size: .9em;
+	}
+
+	.progress-bar-div h5 {
+		font-size: 1em;
+	}
+
+	.project-screenshots img {
+		margin-bottom: 10px; 
 	}
 }
 
